fixed the overflow bug not showing the background images by adding another div with full height and width around it

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -26,6 +26,13 @@
   margin: 0 auto;
 }
 
+.overflow-blocker {
+  width: 100%;
+  height: 100%;
+  @include translateXY();
+  overflow: hidden;
+}
+
 .section {
   margin-bottom: 100px;
 }
@@ -246,8 +253,8 @@
   &__item {
     flex: 1;
     height: auto;
-    overflow: hidden;
     cursor: pointer;
+    position: relative;
     &:before {
       content: '';
       float: left;
@@ -260,7 +267,7 @@
       transition: transform .2s ease-in-out;
     }
     &:hover .gallery__item__img,
-    &:focus .gallery__item__img{
+    &:focus .gallery__item__img {
       transform: scale(1.2);
       transform-origin: center;
     }
@@ -277,6 +284,7 @@
   &__img-container {
     width: 100%;
     height: auto;
+    position: relative;
     &:before {
       content: '';
       float: left;
