--- a/src/scss/layout/_responsive.scss
+++ b/src/scss/layout/_responsive.scss
@@ -21,10 +21,9 @@
     flex-wrap: wrap;
   }
   .gallery {
-    &__img {
+    &__item {
       flex: 0 0 100%;
-      cursor: pointer;
-    }
+    }  
   }
 }
 
